[package]
name = "game_public_good"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
traits = { path = "../traits", default-features = false }

[dev-dependencies]
ink_e2e = { version = "4.1" }

[lib]
name = "game_public_good"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for contract Wasm blobs that are to be linked against.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "traits/std",
]
ink-as-dependency = []
e2e-tests = []
