[package]
name = "games_router"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
game_public_good = { path = "../game_public_good", default-features = false, features = ["ink-as-dependency"] }
game_rock_paper_scissors = { path = "../game_rock_paper_scissors", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "games_router"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "game_public_good/std",
    "game_rock_paper_scissors/std",
]
ink-as-dependency = []
