[package]
name = "public_good"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "^3.0.0", default-features = false }
logics = { path = "../../logics", default-features = false }

[dev-dependencies]
ink_e2e = "4.1"

[lib]
path = "lib.rs"
name = "public_good"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for contract Wasm blobs that are to be linked against.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "logics/std"
]
ink-as-dependency = []
e2e-tests = []

[toolchain]
channel = "nightly-2023-02-07"
