[package]
name = "public_good"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[profile.dev]
overflow-checks = false

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "^3.0.0", default-features = false, features = ["access_control"] }
game-theory = { path = "../../", default-features = false }

[dev-dependencies]
ink_e2e = "4.1"

[lib]
path = "lib.rs"
name = "public_good"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "game-theory/std"
]
ink-as-dependency = []
e2e-tests = []