[package]
name = "router"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

rock_paper_scissors = { path = "../../contracts/rock_paper_scissors", default-features = false, features = ["ink-as-dependency"] }
public_good = { path = "../../contracts/public_good", default-features = false, features = ["ink-as-dependency"] }
dictator = { path = "../../contracts/dictator", default-features = false, features = ["ink-as-dependency"] }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", version = "^3.0.0", default-features = false }

[dev-dependencies]
ink_e2e = "4.1"

[lib]
name = "router"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
